--- a/BottomDrawer/Scenes/BottomDrawer/BottomDrawer.storyboard
+++ b/BottomDrawer/Scenes/BottomDrawer/BottomDrawer.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sSi-OT-2UF">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sSi-OT-2UF">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,28 +13,28 @@
             <objects>
                 <viewController storyboardIdentifier="BottomDrawerViewController" id="sSi-OT-2UF" customClass="BottomDrawerViewController" customModule="BottomDrawer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YAF-8I-nYH">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="1300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="1500"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EDu-xl-pyD">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="1300"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="1500"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="umD-Pf-8F3">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1300"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1500"/>
                                         <subviews>
                                             <visualEffectView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Lc-bf-dho">
-                                                <rect key="frame" x="0.0" y="100" width="414" height="1300"/>
+                                                <rect key="frame" x="0.0" y="100" width="414" height="1500"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Wji-3i-dwC">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="1300"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="1500"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
                                                         <tableView clipsSubviews="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Mzc-sn-T0i">
-                                                            <rect key="frame" x="0.0" y="30" width="414" height="1270"/>
+                                                            <rect key="frame" x="0.0" y="30" width="414" height="1470"/>
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                             <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <view key="tableFooterView" contentMode="scaleToFill" id="iUs-XW-VwU">
-                                                                <rect key="frame" x="0.0" y="274" width="414" height="1"/>
+                                                                <rect key="frame" x="0.0" y="302" width="414" height="1"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             </view>
@@ -45,11 +43,11 @@
                                                                     <rect key="frame" x="0.0" y="28" width="414" height="68"/>
                                                                     <autoresizingMask key="autoresizingMask"/>
                                                                     <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hEH-gc-Sae" id="IJh-gz-Lmr">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="67.5"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="68"/>
                                                                         <autoresizingMask key="autoresizingMask"/>
                                                                         <subviews>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TSi-xE-KSY">
-                                                                                <rect key="frame" x="16" y="24" width="382" height="19.5"/>
+                                                                                <rect key="frame" x="16" y="24" width="382" height="20"/>
                                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                                 <nil key="textColor"/>
                                                                                 <nil key="highlightedColor"/>
@@ -72,20 +70,20 @@
                                                                     <rect key="frame" x="0.0" y="96" width="414" height="79"/>
                                                                     <autoresizingMask key="autoresizingMask"/>
                                                                     <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Yss-vJ-cgR" id="uV9-gd-FYq">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="78.5"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="79"/>
                                                                         <autoresizingMask key="autoresizingMask"/>
                                                                         <subviews>
                                                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="hVm-g3-ylx">
-                                                                                <rect key="frame" x="16" y="24" width="382" height="30.5"/>
+                                                                                <rect key="frame" x="16" y="24" width="382" height="31"/>
                                                                                 <subviews>
                                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fqS-2k-cm0">
-                                                                                        <rect key="frame" x="0.0" y="0.0" width="186" height="30.5"/>
+                                                                                        <rect key="frame" x="0.0" y="0.0" width="186" height="31"/>
                                                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                                         <nil key="textColor"/>
                                                                                         <nil key="highlightedColor"/>
                                                                                     </label>
                                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Subtitle" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BqD-im-TSP">
-                                                                                        <rect key="frame" x="196" y="0.0" width="186" height="30.5"/>
+                                                                                        <rect key="frame" x="196" y="0.0" width="186" height="31"/>
                                                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                                         <nil key="textColor"/>
                                                                                         <nil key="highlightedColor"/>
@@ -95,7 +93,7 @@
                                                                         </subviews>
                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         <constraints>
-                                                                            <constraint firstAttribute="bottom" secondItem="hVm-g3-ylx" secondAttribute="bottom" constant="24" id="0bj-Mc-OdX"/>
+                                                                            <constraint firstAttribute="bottom" secondItem="hVm-g3-ylx" secondAttribute="bottom" priority="750" constant="24" id="0bj-Mc-OdX"/>
                                                                             <constraint firstItem="hVm-g3-ylx" firstAttribute="top" secondItem="uV9-gd-FYq" secondAttribute="top" constant="24" id="9hX-uW-xXh"/>
                                                                             <constraint firstAttribute="trailing" secondItem="hVm-g3-ylx" secondAttribute="trailing" constant="16" id="ced-Fe-Bke"/>
                                                                             <constraint firstItem="hVm-g3-ylx" firstAttribute="leading" secondItem="uV9-gd-FYq" secondAttribute="leading" constant="16" id="e8A-uT-otA"/>
@@ -111,7 +109,7 @@
                                                                     <rect key="frame" x="0.0" y="175" width="414" height="99"/>
                                                                     <autoresizingMask key="autoresizingMask"/>
                                                                     <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xW7-AE-PVD" id="wso-Im-Zrp">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="98.5"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="99"/>
                                                                         <autoresizingMask key="autoresizingMask"/>
                                                                         <subviews>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="1000" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YRC-hT-PeQ">
@@ -121,7 +119,7 @@
                                                                                 <nil key="highlightedColor"/>
                                                                             </label>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="csI-1v-EOf">
-                                                                                <rect key="frame" x="16" y="49.5" width="382" height="25"/>
+                                                                                <rect key="frame" x="16" y="49.5" width="382" height="25.5"/>
                                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                                 <nil key="textColor"/>
                                                                                 <nil key="highlightedColor"/>
@@ -134,7 +132,7 @@
                                                                             <constraint firstItem="csI-1v-EOf" firstAttribute="leading" secondItem="YRC-hT-PeQ" secondAttribute="leading" id="c3F-Ra-vJ5"/>
                                                                             <constraint firstItem="YRC-hT-PeQ" firstAttribute="top" secondItem="wso-Im-Zrp" secondAttribute="top" constant="24" id="cBH-Fm-7M4"/>
                                                                             <constraint firstAttribute="trailing" secondItem="YRC-hT-PeQ" secondAttribute="trailing" constant="16" id="dbH-Fr-tT4"/>
-                                                                            <constraint firstAttribute="bottom" secondItem="csI-1v-EOf" secondAttribute="bottom" priority="999" constant="24" id="htx-6I-N1V"/>
+                                                                            <constraint firstAttribute="bottom" secondItem="csI-1v-EOf" secondAttribute="bottom" priority="750" constant="24" id="htx-6I-N1V"/>
                                                                             <constraint firstItem="YRC-hT-PeQ" firstAttribute="left" secondItem="wso-Im-Zrp" secondAttribute="left" constant="16" id="t9B-Ks-nfd"/>
                                                                         </constraints>
                                                                     </tableViewCellContentView>
@@ -147,7 +145,7 @@
                                                             </prototypes>
                                                             <connections>
                                                                 <outlet property="dataSource" destination="sSi-OT-2UF" id="LPv-0s-dnL"/>
-                                                                <outlet property="delegate" destination="sSi-OT-2UF" id="A4m-eC-S4Y"/>
+                                                                <outlet property="delegate" destination="sSi-OT-2UF" id="Q5w-3S-KoF"/>
                                                             </connections>
                                                         </tableView>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="minus" translatesAutoresizingMaskIntoConstraints="NO" id="jAU-pB-2rf">
@@ -209,11 +207,8 @@
                             <constraint firstItem="EDu-xl-pyD" firstAttribute="leading" secondItem="YAF-8I-nYH" secondAttribute="leading" id="hCe-Ql-Hos"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ybJ-dZ-fL6"/>
-                        <connections>
-                            <outletCollection property="gestureRecognizers" destination="RFn-ok-s9h" appends="YES" id="2Q4-6w-pP0"/>
-                        </connections>
                     </view>
-                    <size key="freeformSize" width="414" height="1300"/>
+                    <size key="freeformSize" width="414" height="1500"/>
                     <connections>
                         <outlet property="drawerTableView" destination="Mzc-sn-T0i" id="tBJ-gx-EWj"/>
                         <outlet property="drawerVisualEffectView" destination="4Lc-bf-dho" id="fU3-v8-9Ct"/>
@@ -226,11 +221,6 @@
                         <action selector="drawerScrolledToBottom:" destination="sSi-OT-2UF" id="lpr-7X-kqA"/>
                     </connections>
                 </panGestureRecognizer>
-                <tapGestureRecognizer id="RFn-ok-s9h">
-                    <connections>
-                        <action selector="backgroundViewPressed:" destination="sSi-OT-2UF" id="fRh-dT-8HJ"/>
-                    </connections>
-                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-700" y="-95.089285714285708"/>
         </scene>
