--- a/BottomDrawer/Scenes/BottomDrawer/BottomDrawer.storyboard
+++ b/BottomDrawer/Scenes/BottomDrawer/BottomDrawer.storyboard
@@ -28,8 +28,15 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="414" height="1500"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <subviews>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sUO-z7-ygY" userLabel="Thin Line View">
+                                                            <rect key="frame" x="0.0" y="0.0" width="414" height="1"/>
+                                                            <color key="backgroundColor" white="0.76336010856807501" alpha="0.29021786971830987" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="1" id="GUc-sH-Otv"/>
+                                                            </constraints>
+                                                        </view>
                                                         <tableView clipsSubviews="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Mzc-sn-T0i">
-                                                            <rect key="frame" x="0.0" y="30" width="414" height="1470"/>
+                                                            <rect key="frame" x="0.0" y="31" width="414" height="1469"/>
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                             <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -149,7 +156,7 @@
                                                             </connections>
                                                         </tableView>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="minus" translatesAutoresizingMaskIntoConstraints="NO" id="jAU-pB-2rf">
-                                                            <rect key="frame" x="182" y="0.0" width="50" height="30"/>
+                                                            <rect key="frame" x="182" y="1" width="50" height="30"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="50" id="0fr-tW-Mnb"/>
                                                                 <constraint firstAttribute="height" constant="30" id="DOK-JK-y3V"/>
@@ -158,22 +165,19 @@
                                                     </subviews>
                                                     <gestureRecognizers/>
                                                     <constraints>
+                                                        <constraint firstItem="jAU-pB-2rf" firstAttribute="top" secondItem="sUO-z7-ygY" secondAttribute="bottom" id="Dik-fH-0X6"/>
+                                                        <constraint firstAttribute="trailing" secondItem="sUO-z7-ygY" secondAttribute="trailing" id="F9z-uk-gdQ"/>
                                                         <constraint firstItem="Mzc-sn-T0i" firstAttribute="leading" secondItem="Wji-3i-dwC" secondAttribute="leading" id="FM2-34-IIi"/>
-                                                        <constraint firstItem="jAU-pB-2rf" firstAttribute="top" secondItem="Wji-3i-dwC" secondAttribute="top" id="HDe-4D-4AC"/>
                                                         <constraint firstAttribute="bottom" secondItem="Mzc-sn-T0i" secondAttribute="bottom" id="Icw-qd-DXf"/>
+                                                        <constraint firstItem="sUO-z7-ygY" firstAttribute="leading" secondItem="Wji-3i-dwC" secondAttribute="leading" id="VB3-Dr-UgO"/>
                                                         <constraint firstItem="Mzc-sn-T0i" firstAttribute="top" secondItem="jAU-pB-2rf" secondAttribute="bottom" id="VfN-qu-UZ5"/>
                                                         <constraint firstItem="Mzc-sn-T0i" firstAttribute="top" secondItem="jAU-pB-2rf" secondAttribute="bottom" id="bnc-es-3Hr"/>
+                                                        <constraint firstItem="sUO-z7-ygY" firstAttribute="top" secondItem="Wji-3i-dwC" secondAttribute="top" id="gGB-jX-yWE"/>
                                                         <constraint firstItem="jAU-pB-2rf" firstAttribute="centerX" secondItem="Wji-3i-dwC" secondAttribute="centerX" id="kYK-QI-E34"/>
                                                         <constraint firstAttribute="trailing" secondItem="Mzc-sn-T0i" secondAttribute="trailing" id="ye8-CE-LEi"/>
                                                     </constraints>
                                                 </view>
                                                 <blurEffect style="light"/>
-                                                <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
-                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                        <integer key="value" value="30"/>
-                                                    </userDefinedRuntimeAttribute>
-                                                </userDefinedRuntimeAttributes>
                                                 <connections>
                                                     <outletCollection property="gestureRecognizers" destination="rtZ-tI-K7R" appends="YES" id="VbN-hj-6bp"/>
                                                 </connections>
